kyries first website

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
 	<title>Kyrie's Cupcake Shop</title>
 	<style type="text/css"></style>
 	<link rel="stylesheet" href="mystyles.css" />
-	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="instructions.css" />
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 </head>
@@ -16,9 +15,9 @@
 				<a href="index.html"><img src="img/logo.png" alt=""></a>
 			</div>
 			<ul class="menu">
-				<li><a class="selected" href="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="shop.html">Shop</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a class="selected" href="contact.html">Contact</a></li>
 				<li><a id="show-instructions" href="#">Instructions</a></li>
 			</ul>
 		</div>
@@ -26,19 +25,23 @@
 	</div>
 	<div class="content">
 		<div class="inner">
-		<h1>Kyrie's Cupcake Shop</h1>
-			<h2>Who am I?</h2>
-			<p>I'm Kyrie! I love video games, music, coding, and cupcakes!!! </p>
-			
+			<h1>Kyrie's Cupcake Shop</h1>
+			<h2>visit us at </h2>
+		<p>Kyries cupcake shop </p>
+		<p>11607 w 99th ter </p>
+		<p>Overland Park, KS 66214 </p>
+		<h2>Send e-mail to Kyrie</h2>
+		<form action="mailto:kyrie@billcapps.net" method="post" enctype="text/plain">
+Name:<br>
+<input type="text" name="name"><br>
+E-mail:<br>
+<input type="text" name="mail"><br>
+Comment:<br>
+<input type="text" name="comment" size="50"><br><br>
+<input type="submit" value="Send">
+<input type="reset" value="Reset">
+</form>
 		
-			<ul class="inline">
-				<li><img src="img/cupcakes/cupcake1.jpg" alt="code games" /></li>
-				<li><img src="img/cupcakes/cupcake2.jpg" alt="build app" /></li>
-				<li><img src="img/cupcakes/cupcake4.jpg" alt="light up clothes"></li>
-			</ul>
-			
-			<h3>My cupcakes</h3>
-	<p>I worked very hard on these three cupcakes. They are my favorites.<p>
 		</div>
 	</div>
 	<div class="footer">
@@ -94,4 +97,4 @@
 	</div>
 	<script type="text/javascript" src="scripts.js"></script>
 </body>
-</html>
+</html>s
