--- a/shop.html
+++ b/shop.html
@@ -40,6 +40,13 @@
 				<h5>$5.00</h5> 
 				<img src="img/cupcakes/cupcake3.jpg" alt="strawberry" />
 			</li>
+			<li class="cupcake">
+				<h4>Galaxy Cupcake</h4>
+				<h4 class="tiny">with</h4> 
+				<h4>Star Frosting</h4>
+				<h5>$10.00</h5> 
+				<img src="https://truffle-assets.imgix.net/pxqrocxwsjcc_6OcJeUMaWIYOmKgsK6IwWc_galaxy-cupcakes_squareThumbnail_en-US.jpeg" alt="strawberry" />
+			</li>
 		</ul>
 	</div>
 	<div id="instructions">
