kyries first website updates

--- a/shop.html
+++ b/shop.html
@@ -24,6 +24,7 @@
 		
 	</div>
 	<div class="content">
+		<center>
 		<h1>Shop Cupcakes </h1>
 		<ul class="inline">
 			<li class="cupcake">
@@ -47,7 +48,15 @@
 				<h5>$10.00</h5> 
 				<img src="https://truffle-assets.imgix.net/pxqrocxwsjcc_6OcJeUMaWIYOmKgsK6IwWc_galaxy-cupcakes_squareThumbnail_en-US.jpeg" alt="strawberry" />
 			</li>
+			<li class="cupcake">
+				<h4>pokeball  Cupcake</h4>
+				<h4 class="tiny">with</h4> 
+				<h4>Red,black, and white Frosting</h4>
+				<h5>$5.00</h5> 
+				<img src="https://i.ytimg.com/vi/Jt39nWLvr8o/maxresdefault.jpg" alt="strawberry" />
+			</li>
 		</ul>
+		</center>
 	</div>
 	<div id="instructions">
 		<h2>Instructions</h2>
