kyries first website updates

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<h1>Kyrie's Cupcake Shop</h1>
 			<h2>Who am I?</h2>
 			<p>I'm Kyrie! I love video games, music, coding, and cupcakes!!! </p>
-			
+			<img src="img/kyrie.jpg" alt="Kyrie" width="315" height="547">
 		
 			<ul class="inline">
 				<li><img src="img/cupcakes/cupcake1.jpg" alt="code games" /></li>
@@ -38,7 +38,7 @@
 			</ul>
 			
 			<h3>My cupcakes</h3>
-	<p>I worked very hard on these three cupcakes. They are my favorites.<p>
+	<p>I worked very hard on these three cupcakes. They are my favorites.<p> 
 		</div>
 	</div>
 	<div class="footer">
