kyries first website updates

--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
 		
 	</div>
 	<div class="content">
-		<center>
+		
 		<h1>Shop Cupcakes </h1>
 		<ul class="inline">
 			<li class="cupcake">
@@ -55,8 +55,21 @@
 				<h5>$5.00</h5> 
 				<img src="https://i.ytimg.com/vi/Jt39nWLvr8o/maxresdefault.jpg" alt="strawberry" />
 			</li>
+				<li class="cupcake">
+				<h4>Halloween  Cupcake</h4>
+				<h4 class="tiny">with</h4> 
+				<h4>Pumpkin Frosting</h4>
+				<h5>$5.00</h5> 
+				<img src="http://images.media-allrecipes.com/images/52258.jpg" alt="strawberry" />
+			</li>
+				<li class="cupcake">
+				<h4>chika the chickens  Cupcake</h4>
+				<h4 class="tiny">with</h4> 
+				<h4>Pink Frosting</h4>
+				<h5>$5.00</h5> 
+				<img src="https://i.ytimg.com/vi/c_YrUZ_9COo/maxresdefault.jpg" alt="strawberry" />
+			</li>
 		</ul>
-		</center>
 	</div>
 	<div id="instructions">
 		<h2>Instructions</h2>
